# utxo-accumulator-server

./: .gitignore  README.md  cabal.project  config.yaml  format.sh  package-lock.json  setup.sh  txs.json
.github/workflows/: CI.yml  build.yml  copy-ui.yml  haskell.yml  test-deployment.yml
config/: 1000ada.yaml  100ada.yaml  INDY_1000.yaml
database/: cache.json
utxo-accumulator-api/: CHANGELOG.md  LICENSE  accumulation-group-elements.json  distribution-group-elements.json  switch-group-element.json  utxo-accumulator-api.cabal
utxo-accumulator-api/crs-generator/: Main.hs
utxo-accumulator-api/data/: accumulation-group-elements.json  bls12381-g2_n1.json  bls12381-g2_n2.json  distribution-group-elements.json
utxo-accumulator-api/precompute/: Main.hs
utxo-accumulator-api/src/ZkFold/Cardano/UtxoAccumulator/: Api.hs  Constants.hs  Database.hs  Datum.hs  IO.hs  Orphans.hs  Precompute.hs  Redeemer.hs  ScriptParameters.hs  Sync.hs  Transition.hs  TxBuilder.hs  Types.hs  Utils.hs
utxo-accumulator-api/src/ZkFold/Cardano/UtxoAccumulator/Api/: Utils.hs
utxo-accumulator-api/src/ZkFold/Cardano/UtxoAccumulator/Sync/: Cache.hs  FetchTx.hs  Internal.hs  Query.hs
utxo-accumulator-api/src/ZkFold/Cardano/UtxoAccumulator/TxBuilder/: Internal.hs  Skeleton.hs  Utils.hs
utxo-accumulator-api/src/ZkFold/Cardano/UtxoAccumulator/Types/: Config.hs  Context.hs  Errors.hs  Monad.hs  State.hs  Sync.hs
utxo-accumulator-api/test/: Main.hs
utxo-accumulator-api/test/ZkFold/Cardano/UtxoAccumulator/: Test.hs
utxo-accumulator-api/test/ZkFold/Cardano/UtxoAccumulator/Test/: Utils.hs
utxo-accumulator-server/: CHANGELOG.md  utxo-accumulator-server.cabal
utxo-accumulator-server/app/: Main.hs
utxo-accumulator-server/src/ZkFold/Cardano/UtxoAccumulator/Server/: Api.hs  Auth.hs  Config.hs  ErrorMiddleware.hs  Git.hs  Options.hs  Orphans.hs  RSA.hs  RequestLoggerMiddleware.hs  Run.hs  Utils.hs
utxo-accumulator-server/src/ZkFold/Cardano/UtxoAccumulator/Server/Api/: Settings.hs  Tx.hs
web/openapi/: api.yaml
web/server/: README.md  manage_apis.py  requirements.txt  server_api.yaml  servers_config.yaml
web/ui/: api.ts  branding.css  branding.d.ts  branding.js  config.ts  index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  ui.ts  utils.ts  vite.config.js  wallet.ts
web/ui/public/: branding.js
web/ui/src/: rsa.ts
