cabal-version: 3.8
name: utxo-accumulator-api
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.UtxoAccumulator.Constants
    ZkFold.Cardano.UtxoAccumulator.Database
    ZkFold.Cardano.UtxoAccumulator.Datum
    ZkFold.Cardano.UtxoAccumulator.Precompute
    ZkFold.Cardano.UtxoAccumulator.Sync
    ZkFold.Cardano.UtxoAccumulator.Transition
    ZkFold.Cardano.UtxoAccumulator.TxBuilder
    ZkFold.Cardano.UtxoAccumulator.TxBuilder.Internal
    ZkFold.Cardano.UtxoAccumulator.TxBuilder.Utils
    ZkFold.Cardano.UtxoAccumulator.Types
    ZkFold.Cardano.UtxoAccumulator.Types.Config
    ZkFold.Cardano.UtxoAccumulator.Types.Errors
    ZkFold.Cardano.UtxoAccumulator.Utils

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    atlas-cardano,
    base >=4.18.2.1 && <5,
    base16-bytestring,
    bytestring,
    cardano-api,
    cardano-ledger-core,
    containers,
    data-default,
    deriving-aeson,
    directory,
    file-embed,
    http-types,
    lens,
    mime-mail,
    mtl,
    plutus-ledger-api,
    plutus-tx,    
    smtp-mail,
    sqlite-simple,
    swagger2,
    symbolic-base,
    symbolic-cardano,
    symbolic-examples,
    text,
    time,
    zkfold-cardano,
    zkfold-cardano-scripts,
    zkfold-cardano-scripts-common,

  hs-source-dirs: src

test-suite utxo-accumulator-api-tests
  import: common
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ZkFold.Cardano.UtxoAccumulator.Test

  build-depends:
    atlas-cardano,
    base,
    bytestring,
    containers,
    cryptohash-sha256,
    data-default,
    mtl,
    plutus-ledger-api,
    random,
    symbolic-base,
    symbolic-examples,
    tasty,
    tasty-hunit,
    template-haskell,
    text,
    utxo-accumulator-api,
    zkfold-cardano,
