cabal-version: 3.8
name: utxo-accumulator-api
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.UtxoAccumulator.Constants
    ZkFold.Cardano.UtxoAccumulator.Database
    ZkFold.Cardano.UtxoAccumulator.Datum
    ZkFold.Cardano.UtxoAccumulator.IO
    ZkFold.Cardano.UtxoAccumulator.Orphans
    ZkFold.Cardano.UtxoAccumulator.Sync
    ZkFold.Cardano.UtxoAccumulator.Sync.Cache
    ZkFold.Cardano.UtxoAccumulator.Sync.FetchTx
    ZkFold.Cardano.UtxoAccumulator.Sync.Internal
    ZkFold.Cardano.UtxoAccumulator.Sync.Query
    ZkFold.Cardano.UtxoAccumulator.Transition
    ZkFold.Cardano.UtxoAccumulator.TxBuilder
    ZkFold.Cardano.UtxoAccumulator.TxBuilder.Internal
    ZkFold.Cardano.UtxoAccumulator.Types
    ZkFold.Cardano.UtxoAccumulator.Types.Config
    ZkFold.Cardano.UtxoAccumulator.Types.Errors
    ZkFold.Cardano.UtxoAccumulator.Types.Sync
    ZkFold.Cardano.UtxoAccumulator.Utils

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    atlas-cardano,
    base >=4.18.2.1 && <5,
    base16-bytestring,
    bytestring,
    containers,
    directory,
    http-types,
    http-conduit,
    maestro-sdk,
    plutus-ledger-api,
    plutus-tx,
    serialise,
    symbolic-base,
    symbolic-examples,
    text,
    time,
    vector,
    zkfold-cardano,
    zkfold-cardano-scripts,
  hs-source-dirs: src

test-suite utxo-accumulator-api-tests
  import: common
  -- other-modules:
  -- other-extensions:
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ZkFold.Cardano.UtxoAccumulator.Test
  build-depends:
    atlas-cardano,
    base,
    symbolic-base,
    tasty,
    tasty-hunit,
    utxo-accumulator-api,

executable crs-generator
  import: common
  main-is: Main.hs
  hs-source-dirs: crs-generator
  build-depends:
    base,
    symbolic-base,
    symbolic-examples,
    utxo-accumulator-api,
