cabal-version: 3.12
name: utxo-accumulator-server
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
maintainer: info@zkfold.io
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TemplateHaskell
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wunused-packages

library
  import: common
  exposed-modules:
    ZkFold.Cardano.UtxoAccumulator.Server.Api
    ZkFold.Cardano.UtxoAccumulator.Server.Api.Settings
    ZkFold.Cardano.UtxoAccumulator.Server.Api.Tx
    ZkFold.Cardano.UtxoAccumulator.Server.Auth
    ZkFold.Cardano.UtxoAccumulator.Server.Config
    ZkFold.Cardano.UtxoAccumulator.Server.Options
    ZkFold.Cardano.UtxoAccumulator.Server.Orphans
    ZkFold.Cardano.UtxoAccumulator.Server.ErrorMiddleware
    ZkFold.Cardano.UtxoAccumulator.Server.RequestLoggerMiddleware
    ZkFold.Cardano.UtxoAccumulator.Server.Run
    ZkFold.Cardano.UtxoAccumulator.Server.Utils

  other-modules:
    PackageInfo_utxo_accumulator_server

  autogen-modules:
    PackageInfo_utxo_accumulator_server

  build-depends:
    aeson,
    atlas-cardano,
    base,
    binary,
    bytestring,
    cardano-api,
    data-default,
    deriving-aeson,
    envy,
    fast-logger,
    filepath,
    fmt,
    http-types,
    insert-ordered-containers,
    lens,
    mtl,
    openapi3,
    optparse-applicative,
    resource-pool,
    servant-foreign,
    servant-openapi3,
    servant-server,
    sqlite-simple,
    stm,
    swagger2,
    symbolic-base,
    text,
    time,
    time-manager,
    utxo-accumulator-api,
    wai,
    wai-extra,
    warp,
    yaml,

  hs-source-dirs: src

executable utxo-accumulator-server
  import: common
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base,
    optparse-applicative,
    utxo-accumulator-server

  hs-source-dirs: app
